@@ -27,6 +27,7 @@ cdef class DatasetBase:
     cdef public object _offsets
     cdef public object _read
     cdef public object _gcps
+    cdef public object _env
     cdef GDALDatasetH handle(self) except NULL
     cdef GDALRasterBandH band(self, int bidx) except NULL
 
